--- a/src/main/gradle/ii-bda.gradle
+++ b/src/main/gradle/ii-bda.gradle
@@ -26,6 +26,10 @@ import org.gradle.internal.os.OperatingSystem;
 println 'ETF-BDA: Applying ii BDA gradle script 1.0.24 to the project'
 
 buildscript {
+
+    ext.updateVersionEye = project.findProperty("ii.etfdev.quality.reports")=='true' &&
+            (project.findProperty("versioneye.api_key")?.trim() || System.getenv("VERSIONEYE_API_KEY")?.trim())
+
     repositories {
         jcenter()
         maven {
@@ -43,13 +47,9 @@ buildscript {
         // Git plugin for version information, repo url, etc
         classpath 'org.ajoberstar:grgit:1.8.0'
 
-        if (project.findProperty("ii.etfdev.quality.reports")=='true') {
-            if(project.findProperty("versioneye.api_key")!=null ||
-                    System.getenv("VERSIONEYE_API_KEY")!=null)
-            {
-                // Monitor dependency information (version, license, security status)
-                classpath 'org.standardout:gradle-versioneye-plugin:1.4.0'
-            }
+        if(project.updateVersionEye) {
+            // Monitor dependency information (version, license, security status)
+            classpath 'org.standardout:gradle-versioneye-plugin:1.4.0'
         }
     }
 }
@@ -233,10 +233,6 @@ allprojects {
     assert gradle.rootProject.ext.r_user != null
     assert gradle.rootProject.ext.r_pwd != null
 
-    ext.updateVersionEye = (project.findProperty("versioneye.api_key")!=null ||
-            System.getenv("VERSIONEYE_API_KEY")!=null) &&
-            gradle.rootProject.ext.qualityReports
-
     ext.spotlessJavaSrcFiles = project.fileTree(project.projectDir) {
         include 'src/main/java/de/interactive_instruments/**/*.java'
         include 'src/test/java/de/interactive_instruments/**/*.java'
@@ -365,7 +361,8 @@ allprojects {
             versioneye {
                 dependencies=declared
                 includePlugins=false
-                exclude 'testCompile', 'testRuntime'
+                exclude 'testCompile', 'testRuntime', 'testRuntimeOnly', 'testImplementation', 
+                        'runtimeOnly', 'runtimeElements', 'implementation', 'apiElements'
             }
         }
     }
