Skip pre commit hook

--- a/src/main/gradle/ii-bda.gradle
+++ b/src/main/gradle/ii-bda.gradle
@@ -510,6 +510,8 @@ allprojects {
         git {
             requireBranch = 'master'
             pushToRemote = 'origin'
+            // skip pre-commit hook
+            pushOptions = ["--no-verify"]
         }
     }
 
